upd docs
